--- a/src/app/components/modal/modal.component.html
+++ b/src/app/components/modal/modal.component.html
@@ -3,7 +3,7 @@
   <br>
   <div class="row">
     <div class="col-sm-6 col-12">
-      <button type="button" class="btn btn-block btn-primary" (click)="close()" >Fermer</button>
+      <button type="button" class="btn btn-block btn-primary mb-sm-0 mb-2" (click)="close()" >Fermer</button>
 
     </div>
     <div class="col-sm-6 col-12">
