--- a/src/app/views/restaurants/images-management/images-management.component.html
+++ b/src/app/views/restaurants/images-management/images-management.component.html
@@ -7,13 +7,13 @@
       <div class="col-sm-6 col-12">
         <div class="row">
           <div class="col-9">
-            <input   [(ngModel)]="restaurantName"  [ngModelOptions]="{standalone: true}" type="text"  id="text-input" name="text-input" class="form-control " placeholder="Tapez le nom du restaurant">
+            <input   [(ngModel)]="restaurantName"  [ngModelOptions]="{standalone: true}" type="text"  (change)="restaurantSearch()"  id="text-input" name="text-input" class="form-control " placeholder="Tapez le nom du restaurant">
 
           </div>
 
-          <div class="col-3">
+        <!--  <div class="col-3">
             <button type="button" class="btn btn-block btn-primary" (click)="restaurantSearch()">Chercher</button>
-          </div>
+          </div>-->
         </div>
       </div>
     </div>
@@ -38,22 +38,13 @@
 
         <td>
           <div class="row pl-2 ">
-            <i (click)="navigateToRestaurant(item.idRestaurant)" class="fa fa-cog mr-2" aria-hidden="true"></i>
+            <i (click)="navigateToRestaurant(item.idRestaurant)" class="fa fa-pencil mr-2" aria-hidden="true"></i>
           </div>
         </td>
       </tr>
 
     </table>
-    <!--    <ul class="pagination">
-          <li class="page-item"><a class="page-link" href="#">Prev</a></li>
-          <li class="page-item active">
-            <a class="page-link" href="#">1</a>
-          </li>
-          <li class="page-item"><a class="page-link" href="#">2</a></li>
-          <li class="page-item"><a class="page-link" href="#">3</a></li>
-          <li class="page-item"><a class="page-link" href="#">4</a></li>
-          <li class="page-item"><a class="page-link" href="#">Next</a></li>
-        </ul>-->
+
     <mat-paginator
 
       [length]="restaurantsLength"
