--- a/src/app/views/restaurants/liste-restaurants/liste-restaurants.component.html
+++ b/src/app/views/restaurants/liste-restaurants/liste-restaurants.component.html
@@ -6,14 +6,14 @@
       </div>
       <div class="col-sm-6 col-12">
         <div class="row">
-        <div class="col-9">
-          <input   [(ngModel)]="restaurantName"  [ngModelOptions]="{standalone: true}" type="text"  id="text-input" name="text-input" class="form-control " placeholder="Tapez le nom du restaurant">
+        <div class="col-12">
+          <input   [(ngModel)]="restaurantName"  [ngModelOptions]="{standalone: true}" (change)="restaurantSearch()"   type="text"   class="form-control " placeholder="Tapez le nom du restaurant">
 
         </div>
-
+<!--
         <div class="col-3">
-          <button type="button" class="btn btn-block btn-primary" (click)="restaurantSearch()">Chercher</button>
-        </div>
+          <button type="button" class="btn btn-block btn-primary">Chercher</button>
+        </div>-->
         </div>
       </div>
     </div>
@@ -108,8 +108,8 @@
           <td>
           <div class="row pl-2 ">
             <i (click)="navigateToRestaurant(item.idRestaurant)" class="fa fa-eye mr-2" aria-hidden="true"></i>
-            <i class="fa fa-cog mr-2" aria-hidden="true"></i>
-         <!--   <i class="fa fa-trash" aria-hidden="true"></i>-->
+            <i class="fa fa-pencil mr-2" aria-hidden="true" (click)="navigateToModifyRestaurant(item.idRestaurant)"></i>
+            <i class="fa fa-trash" aria-hidden="true" (click)="openDialog(item.idRestaurant)"></i>
           </div>
           </td>
        </tr>
