--- a/src/app/views/restaurants/restaurant-detail/restaurant-detail.component.html
+++ b/src/app/views/restaurants/restaurant-detail/restaurant-detail.component.html
@@ -1,9 +1,14 @@
 <div class="card" *ngIf="!isLoading">
   <div class="card-header ">
     <div class="row">
-      <div class="col-sm-6 col-12">
+      <div class="col-sm-9 col-12">
        <h5>{{restaurantDetails.Nom}}</h5>
       </div>
+
+      <div class="col-sm-3 col-12 mb-sm-0 mb-2">
+        <button type="button" class="btn btn-block btn-primary" (click)="toModify()">Modifier</button>
+      </div>
+
 
     </div>
     <br>
@@ -155,6 +160,13 @@
           </div>
         </div>
       </div>
+      <div class="col-sm-6 col-12">
+        <h6>Position</h6>
+      </div>
+      <div class="col-sm-6 col-12">
+        {{restaurantDetails.Site}}
+      </div>
+
     </div>
   </div>
 </div>
