--- a/src/app/views/restaurants/evenement-modify/evenement-modify.component.html
+++ b/src/app/views/restaurants/evenement-modify/evenement-modify.component.html
@@ -48,7 +48,7 @@
         </div>
       </div>
         <div class="row" *ngIf="this.path">
-          <div class="col-sm-6 col-12 mb-4"  >
+          <div class="col-xl-6 col-12 mb-4"  >
             <div class="image-area" style="max-width: 100px">
               <img [src]="this.safePath"  style="max-width: 100px"   alt="Preview">
               <a (click)="deletePhoto()" class="remove-image"  style="display: inline;">&#215;</a>
