--- a/src/app/views/restaurants/commentaires-restaurant-management/commentaires-restaurant-management.component.html
+++ b/src/app/views/restaurants/commentaires-restaurant-management/commentaires-restaurant-management.component.html
@@ -23,11 +23,11 @@
 
                   <div class="col-md-6 col-12">
                     <div class="row">
-                      <div class="col-6">
+                      <div class="col-xl-6 col-12 mb-xl-0 mb-2">
                         <button type="button" class="btn btn-block btn-primary" (click)="openDialog(item.idCommentaire)">Supprimer</button>
 
                       </div>
-                      <div class="col-6">
+                      <div class="col-xl-6 col-12 mb-xl-0 mb-2">
                         <button type="button" class="btn btn-block btn-primary" (click)="navigateToCommentaireModify(item.idCommentaire)">Modifier</button>
 
                       </div>
