--- a/src/app/views/restaurants/image-restaurant/image-restaurant.component.html
+++ b/src/app/views/restaurants/image-restaurant/image-restaurant.component.html
@@ -1,10 +1,10 @@
 <div class="card" *ngIf="!isLoading">
   <div class="card-header ">
     <div class="row">
-      <div class="col-sm-6 col-12">
+      <div class="col-xl-6 col-12">
         <h5>{{restaurantDetails.Nom}}</h5>
       </div>
-      <div class="col-sm-6 col-12" >
+      <div class="col-xl-6 col-12" >
         <div class="col-10">
           <input class="btn btn-block btn-primary"  type="file" name="file" (change)="uploadFile($event)">
         </div>
@@ -16,7 +16,7 @@
   </div>
   <div class="card-body ">
     <div class="row">
-    <div class="col-sm-6 col-12 mb-4" *ngFor="let type of restaurantDetails.photos">
+    <div class="col-xl-6 col-12 mb-4" *ngFor="let type of restaurantDetails.photos">
       <div class="image-area">
         <img [src]="type.content"   alt="Preview">
         <a (click)="openDialog(type.idPhoto)" class="remove-image"  style="display: inline;">&#215;</a>
