--- a/src/app/views/restaurants/liste-restaurants/liste-restaurants.component.html
+++ b/src/app/views/restaurants/liste-restaurants/liste-restaurants.component.html
@@ -1,15 +1,18 @@
 <div class="card" *ngIf="!isLoading">
   <div class="card-header ">
     <div class="row">
-      <div class="col-sm-6 col-12">
+      <div class="col-xl-6 col-12 mb-xl-0 mb-2">
         Liste des Restaurants
       </div>
-      <div class="col-sm-6 col-12">
+      <div class="col-xl-6 col-12">
         <div class="row">
-        <div class="col-12">
+        <div class="col-xl-9 col-12 mb-xl-0 mb-3">
           <input   [(ngModel)]="restaurantName"  [ngModelOptions]="{standalone: true}" (change)="restaurantSearch()"   type="text"   class="form-control " placeholder="Tapez le nom du restaurant">
 
         </div>
+          <div class="col-xl-3 col-12">
+            <button type="button" class="btn btn-block btn-primary" (click)="navigateToAddRestaurant()">Ajouter</button>
+          </div>
 <!--
         <div class="col-3">
           <button type="button" class="btn btn-block btn-primary">Chercher</button>
@@ -19,9 +22,9 @@
     </div>
     <br>
     <div class="row">
-      <div class="col-sm-3 col-12">
+      <div class="col-xl-3 col-12">
         <div class="form-group row">
-          <label class="col-sm-4 col-form-label" for="select1">Type de Cuisine</label>
+          <label class="col-xl-4 col-form-label" for="select1">Type de Cuisine</label>
           <div class="col-md-8">
             <select id="typeCuisine" [(ngModel)]="selectedCuisineType" name="typeCuisine" class="form-control">
               <option value="">Type de Cuisine</option>
@@ -30,9 +33,9 @@
           </div>
         </div>
       </div>
-      <div class="col-sm-3 col-12" >
+      <div class="col-xl-3 col-12" >
         <div class="form-group row">
-          <label class="col-sm-4 col-form-label" for="select1" >Exigence</label>
+          <label class="col-xl-4 col-form-label" for="select1" >Exigence</label>
           <div class="col-md-8">
             <select id="exigenceAlimentaire" [(ngModel)]="selectedExigenceAlimentaire" name="exigenceAlimentaire" class="form-control">
               <option value="">Exigence Alimentaire</option>
@@ -42,9 +45,9 @@
         </div>
       </div>
 
-      <div class="col-sm-3 col-12">
+      <div class="col-xl-3 col-12">
         <div class="form-group row">
-          <label class="col-sm-4 col-form-label" for="select1">Note</label>
+          <label class="col-xl-4 col-form-label" for="select1">Note</label>
           <div class="col-md-8">
             <select id="note" [(ngModel)]="selectedNote" name="note" class="form-control">
               <option value="-1">Choisir une note</option>
@@ -58,11 +61,11 @@
           </div>
         </div>
       </div>
-      <div class="col-sm-3 col-12">
+      <div class="col-xl-3 col-12">
         <div class="row">
-          <div class="col-6">     <button type="button" class="btn btn-block btn-primary" (click)="filtrer()">Filtrer</button></div>
+          <div class="col-xl-6 col-12 mb-xl-0 mb-3">     <button type="button" class="btn btn-block btn-primary" (click)="filtrer()">Filtrer</button></div>
 
-          <div class="col-6">     <button type="button" class="btn btn-block btn-primary" (click)="reset()">Réinitialiser</button></div>
+          <div class="col-xl-6 col-12 mb-xl-0 mb-3">     <button type="button" class="btn btn-block btn-primary" (click)="reset()">Réinitialiser</button></div>
         </div>
 
       </div>
@@ -106,9 +109,9 @@
          <td>{{item.Site}}</td>
          <td>{{item.guideMichelins}}</td>
           <td>
-          <div class="row pl-2 ">
-            <i (click)="navigateToRestaurant(item.idRestaurant)" class="fa fa-eye mr-2" aria-hidden="true"></i>
-            <i class="fa fa-pencil mr-2" aria-hidden="true" (click)="navigateToModifyRestaurant(item.idRestaurant)"></i>
+          <div class="row pl-1 pr-1 ">
+            <i (click)="navigateToRestaurant(item.idRestaurant)" class="fa fa-eye mr-3" aria-hidden="true"></i>
+            <i class="fa fa-pencil mr-3" aria-hidden="true" (click)="navigateToModifyRestaurant(item.idRestaurant)"></i>
             <i class="fa fa-trash" aria-hidden="true" (click)="openDialog(item.idRestaurant)"></i>
           </div>
           </td>
