--- a/src/app/views/restaurants/menu/menu.component.html
+++ b/src/app/views/restaurants/menu/menu.component.html
@@ -1,10 +1,10 @@
 <div class="card" *ngIf="!isLoading">
   <div class="card-header ">
     <div class="row">
-      <div class="col-sm-6 col-12">
+      <div class="col-xl-6 col-12">
         Liste des Restaurants
       </div>
-      <div class="col-sm-6 col-12">
+      <div class="col-xl-6 col-12">
         <div class="row">
           <div class="col-12">
             <input   [(ngModel)]="restaurantName"  [ngModelOptions]="{standalone: true}" (change)="restaurantSearch()"  type="text"  id="text-input" name="text-input" class="form-control " placeholder="Tapez le nom du restaurant">
@@ -38,7 +38,7 @@
 
         <td>
           <div class="row pl-2 ">
-            <i (click)="navigateToRestaurant(item.idRestaurant)" class="fa fa-pencil mr-2" aria-hidden="true"></i>
+            <i (click)="navigateToRestaurant(item.idRestaurant)" class="fa fa-pencil mr-4" aria-hidden="true"></i>
             <i *ngIf="item.menu!='0'" (click)="navigateToRestaurantView(item.idRestaurant)" class="fa fa-eye mr-2" aria-hidden="true"></i>
             <i  *ngIf="item.menu==='0'"  (click)="navigateToRestaurantUpdate(item.idRestaurant)" class="fa  fa-plus-circle mr-2" aria-hidden="true"></i>
 
