--- a/src/app/views/restaurants/restaurant-add/restaurant-add.component.html
+++ b/src/app/views/restaurants/restaurant-add/restaurant-add.component.html
@@ -1,1 +1,313 @@
-<p>restaurant-add works!</p>
+<div *ngIf="!isLoading" class="row justify-content-center">
+  <div class="card w-100">
+    <div class="card-header">
+      <div class="row">
+        <div class="col-xl-9  col-12  mb-sm-0 mb-2">
+          <strong>Ajouter un restaurant</strong>
+        </div>
+
+      </div>
+    </div>
+    <div class="card-body">
+      <div class="form-group ">
+        <div class="row">
+          <div class="col-xl-6 col-12 mb-sm-0 mb-2">
+            <label for="company">Nom</label>
+          </div>
+          <div class="col-xl-6 col-12 mb-sm-0 ">
+            <input type="text" class="form-control" id="company" [(ngModel)]="Nom" placeholder="Nom">
+          </div>
+
+        </div>
+      </div>
+      <div class="form-group ">
+        <div class="row">
+          <div class="col-xl-6 col-12 mb-sm-0 mb-2">
+            <label for="company">Adresse</label>
+          </div>
+          <div class="col-xl-6 col-12 mb-sm-0 ">
+            <input type="text" class="form-control" id="company" [(ngModel)]="Adresse" placeholder="Adresse">
+          </div>
+
+        </div>
+      </div>
+      <div class="form-group ">
+        <div class="row">
+          <div class="col-xl-6 col-12 mb-sm-0 mb-2">
+            <label for="company">Code Postal</label>
+          </div>
+          <div class="col-xl-6 col-12 mb-sm-0 ">
+            <input type="text" class="form-control" id="company" [(ngModel)]="CodePostal" placeholder="Code Postal">
+          </div>
+
+        </div>
+      </div>
+
+      <div class="form-group ">
+        <div class="row">
+          <div class="col-xl-6 col-12 mb-sm-0 mb-2">
+            <label for="company">Description</label>
+          </div>
+          <div class="col-xl-6 col-12 mb-sm-0 ">
+            <textarea rows="9" type="text" class="form-control" id="company" [(ngModel)]="Description" placeholder="Description" ></textarea>
+          </div>
+
+        </div>
+      </div>
+      <div class="form-group ">
+        <div class="row">
+          <div class="col-xl-6 col-12 mb-sm-0 mb-2">
+            <label for="company">Telephone1</label>
+          </div>
+          <div class="col-xl-6 col-12 mb-sm-0 ">
+            <input type="text" class="form-control" id="company" [(ngModel)]="Telephone" placeholder="tel1">
+          </div>
+
+        </div>
+      </div>
+      <div class="form-group ">
+
+        <div class="row">
+          <div class="col-xl-6 col-12 mb-sm-0 mb-2">
+            <label for="company">Telephone2</label>
+          </div>
+          <div class="col-xl-6 col-12 mb-sm-0 ">
+            <input type="text" class="form-control" id="company" [(ngModel)]="Telephone2" placeholder="tel2">
+          </div>
+
+        </div>
+      </div>
+      <div class="form-group ">
+
+        <div class="row">
+          <div class="col-xl-6 col-12 mb-sm-0 mb-2">
+            <label for="company">Fax</label>
+          </div>
+          <div class="col-xl-6 col-12 mb-sm-0 ">
+            <input type="text" class="form-control" id="company" [(ngModel)]="Fax" placeholder="Fax">
+          </div>
+
+        </div>
+      </div>
+      <div class="form-group ">
+
+        <div class="row">
+          <div class="col-xl-6 col-12 mb-sm-0 mb-2">
+            <label for="company">Horaire</label>
+          </div>
+          <div class="col-xl-6 col-12 mb-sm-0 ">
+            <textarea rows="3" type="text" class="form-control" id="company" [(ngModel)]="Horaire" placeholder="Horaire"></textarea>
+          </div>
+
+        </div>
+      </div>
+      <div class="form-group ">
+
+        <div class="row">
+          <div class="col-xl-6 col-12 mb-sm-0 mb-2">
+            <label for="company">Mail</label>
+          </div>
+          <div class="col-xl-6 col-12 mb-sm-0 ">
+            <input type="text" class="form-control" id="company" [(ngModel)]="Mail" placeholder="Mail">
+          </div>
+
+        </div>
+      </div>
+      <div class="form-group ">
+
+        <div class="row">
+          <div class="col-xl-6 col-12 mb-sm-0 mb-2">
+            <label for="company">Site</label>
+          </div>
+          <div class="col-xl-6 col-12 mb-sm-0 ">
+            <input type="text" class="form-control" id="company" [(ngModel)]="Site" placeholder="Site">
+          </div>
+
+        </div>
+      </div>
+      <div class="form-group ">
+
+        <div class="row">
+          <div class="col-xl-6 col-12 mb-sm-0 mb-2">
+            <label for="company">Longitude</label>
+          </div>
+          <div class="col-xl-6 col-12 mb-sm-0 ">
+            <input type="text" class="form-control" id="company" [(ngModel)]="Longitude" placeholder="Longitude">
+          </div>
+
+        </div>
+      </div>
+      <div class="form-group ">
+
+        <div class="row">
+          <div class="col-xl-6 col-12 mb-sm-0 mb-2">
+            <label for="company">Latitude</label>
+          </div>
+          <div class="col-xl-6 col-12 mb-sm-0 ">
+            <input type="text" class="form-control" id="company" [(ngModel)]="Latitude" placeholder="Latitude">
+          </div>
+
+        </div>
+      </div>
+      <div class="form-group " >
+        <div class="row">
+          <div class="col-xl-6 col-12 mb-sm-0 mb-2" >
+            <label  >Tranche Prix</label>
+
+          </div>
+          <div class="col-xl-6 col-12 mb-sm-0">
+            <select id="typeCuisine" [(ngModel)]="tranchePrix" name="restaurant" class="form-control">
+              <option value="">Tranche Prix</option>
+              <option *ngFor="let type of tranchePrixList$ | async" [value]="type.idTranchePrix">{{type.libelle}}</option>
+            </select>
+          </div>
+        </div>
+
+      </div>
+      <div class="form-group " >
+        <div class="row">
+          <div class="col-xl-6 col-12 mb-sm-0 mb-2" >
+            <label  >Selection Foodiles</label>
+
+          </div>
+          <div class="col-xl-6 col-12 mb-sm-0">
+                <div class="form-check form-check-inline mr-5" id="inline-radios">
+                  <input  [(ngModel)]="selection_foodiles" type="radio" name="inline-radios" id="inlineRadio1" value="1">
+                  <label class="form-check-label" for="inlineRadio1">Oui</label>
+                </div>
+                <div class="form-check form-check-inline ml-5">
+                  <input class="form-check-input"  [(ngModel)]="selection_foodiles"  type="radio" name="inline-radios" id="inlineRadio2" value="0">
+                  <label class="form-check-label" for="inlineRadio2">Non</label>
+                </div>
+          </div>
+        </div>
+
+      </div>
+      <div class="row" >
+        <div class="col-xl-6 col-12 mb-sm-0 mb-2">
+          <label for="company">Typed de Cuisine</label>
+        </div>
+        <div class="col-xl-6 col-12 mb-sm-0 " style="max-height: 200px; overflow-y: auto">
+          <div class="row">
+            <div class="col-xl-6 col-12 mb-sm-0 mb-2" *ngFor="let item of typeCuisineList$ | async">
+              <div class="custom-control custom-checkbox">
+                <input type="checkbox" class="custom-control-input"
+                       (click)="selectTypeCuisine(item)"
+                       [value]="item.idType"
+                       [id]="checkBoxId+item.idType"
+                       [checked]="checked(item.idType,1)"
+                         >
+                <label class="custom-control-label"  [for]="checkBoxId+item.idType">{{item.Libelle}}</label>
+              </div>
+            </div>
+
+
+          </div>
+        </div>
+
+      </div>
+      <div class="row mt-4" >
+        <div class="col-xl-6 col-12 mb-sm-0 mb-2">
+          <label for="company">Exigences Alimentaires</label>
+        </div>
+        <div class="col-xl-6 col-12 mb-sm-0 " style="max-height: 200px; overflow-y: auto">
+          <div class="row">
+            <div class="col-xl-6 col-12 mb-sm-0 mb-2" *ngFor="let item of exigenceAlimentaireList$ | async">
+              <div class="custom-control custom-checkbox">
+                <input type="checkbox" class="custom-control-input"
+                       (click)="selectExigence(item)"
+                       [value]="item.idExigenceAlimentaire"
+                       [id]="checkBoxId2+item.idExigenceAlimentaire"
+                       [checked]="checked(item.idExigenceAlimentaire,2)"
+                       >
+                <label class="custom-control-label"  [for]="checkBoxId2+item.idExigenceAlimentaire">{{item.Libelle}}</label>
+              </div>
+            </div>
+
+
+          </div>
+        </div>
+
+      </div>
+
+      <div class="row mt-4" >
+        <div class="col-xl-6 col-12 mb-sm-0 mb-2">
+          <label for="company">Guides Michelin</label>
+        </div>
+        <div class="col-xl-6 col-12 mb-sm-0 " style="max-height: 200px; overflow-y: auto">
+          <div class="row">
+            <div class="col-xl-6 col-12 mb-sm-0 mb-2" *ngFor="let item of guideMichelin$ | async">
+              <div class="custom-control custom-checkbox">
+                <input type="checkbox" class="custom-control-input"
+                       (click)="selectGuide(item)"
+                       [value]="item.idGuideMichelin"
+                       [id]="checkBoxId4+item.idGuideMichelin"
+                       [checked]="checked(item.idGuideMichelin,4)"
+                >
+                <label class="custom-control-label"  [for]="checkBoxId4+item.idGuideMichelin">{{item.libelle}}</label>
+              </div>
+            </div>
+          </div>
+        </div>
+
+      </div>
+      <div class="row mt-4" >
+       <div class="col-xl-6 col-12 mb-sm-0 mb-2">
+         <label for="company">Les ambiances</label>
+       </div>
+       <div class="col-xl-6 col-12 mb-sm-0 " style="max-height: 200px; overflow-y: auto">
+         <div class="row">
+           <div class="col-xl-6 col-12 mb-sm-0 mb-2" *ngFor="let item of ambiancesList$ | async">
+             <div class="custom-control custom-checkbox">
+               <input type="checkbox" class="custom-control-input"
+                      (click)="selectAmbiance(item)"
+                      [value]="item.idCadreAmbiance"
+                      [id]="checkBoxId3+item.idCadreAmbiance"
+                      [checked]="checked(item.idCadreAmbiance,3)" >
+               <label class="custom-control-label"  [for]="checkBoxId3+item.idCadreAmbiance">{{item.libelle}}</label>
+             </div>
+           </div>
+
+
+         </div>
+       </div>
+
+     </div>
+      <div class="row mt-4" >
+        <div class="col-xl-6 col-12 mb-sm-0 mb-2">
+          <label for="company">Moyens de paiement</label>
+        </div>
+        <div class="col-xl-6 col-12 mb-sm-0 " style="max-height: 200px; overflow-y: auto">
+          <div class="row">
+            <div class="col-xl-6 col-12 mb-sm-0 mb-2" *ngFor="let item of moyensPaiemenstList$ | async">
+              <div class="custom-control custom-checkbox">
+                <input type="checkbox" class="custom-control-input"
+                       (click)="selectPayment(item)"
+                       [value]="item.idMoyenPaiement"
+                       [id]="checkBoxId5+item.idMoyenPaiement"
+                       [checked]="checked(item.idMoyenPaiement,5)" >
+                <label class="custom-control-label"  [for]="checkBoxId5+item.idMoyenPaiement">{{item.libelle}}</label>
+              </div>
+            </div>
+
+
+          </div>
+        </div>
+
+      </div>
+    </div>
+
+    <div class="row  justify-content-center mb-4  mt-4"  >
+
+      <button type="button" class="btn btn-block btn-primary w-25 mr-2"  (click)="navigateBack()">Retourner</button>
+
+
+      <button type="button" class="btn btn-block btn-primary w-25 ml-2"[disabled]="Nom.length===0"  (click)="addRestaurant()">Ajouter</button>
+
+    </div>
+    <div class="row justify-content-center w-100">
+      <h6 *ngIf="this.success===true" style="color:green;">Ce restaurant est Ajouté avec succees</h6>
+    </div>
+  </div>
+</div>
+<div *ngIf="isLoading" class="row justify-content-center"><app-spinner></app-spinner></div>
