--- a/src/app/views/dashboard/dashboard.component.html
+++ b/src/app/views/dashboard/dashboard.component.html
@@ -8,13 +8,13 @@
           <div>Nombre des restaurants</div>
         </div>
         <div class="chart-wrapper mt-3 mx-3" style="height:70px;">
-          <canvas baseChart class="chart"
+        <!--  <canvas baseChart class="chart"
           [datasets]="lineChart2Data"
           [labels]="lineChart2Labels"
           [options]="lineChart2Options"
           [colors]="lineChart2Colours"
           [legend]="lineChart2Legend"
-          [chartType]="lineChart2Type"></canvas>
+          [chartType]="lineChart2Type"></canvas>-->
         </div>
       </div>
     </div><!--/.col-->
@@ -25,13 +25,13 @@
           <div>Nombre des utilisateurs</div>
         </div>
         <div class="chart-wrapper mt-3 mx-3" style="height:70px;">
-          <canvas baseChart class="chart"
+         <!-- <canvas baseChart class="chart"
                   [datasets]="lineChart1Data "
                   [labels]="lineChart1Labels"
                   [options]="lineChart1Options"
                   [colors]="lineChart1Colours"
                   [legend]="lineChart1Legend"
-                  [chartType]="lineChart1Type"></canvas>
+                  [chartType]="lineChart1Type"></canvas>-->
         </div>
       </div>
     </div><!--/.col-->
@@ -43,13 +43,13 @@
           <div>Nombre des commentaires</div>
         </div>
         <div class="chart-wrapper mt-3" style="height:70px;">
-          <canvas baseChart class="chart"
+        <!--  <canvas baseChart class="chart"
           [datasets]="lineChart3Data"
           [labels]="lineChart3Labels"
           [options]="lineChart3Options"
           [colors]="lineChart3Colours"
           [legend]="lineChart3Legend"
-          [chartType]="lineChart3Type"></canvas>
+          [chartType]="lineChart3Type"></canvas>-->
         </div>
       </div>
     </div><!--/.col-->
@@ -61,13 +61,13 @@
           <div>Nombre des images</div>
         </div>
         <div class="chart-wrapper mt-3 mx-3" style="height:70px;">
-          <canvas baseChart class="chart"
+         <!-- <canvas baseChart class="chart"
           [datasets]="barChart1Data"
           [labels]="barChart1Labels"
           [options]="barChart1Options"
           [colors]="barChart1Colours"
           [legend]="barChart1Legend"
-          [chartType]="barChart1Type"></canvas>
+          [chartType]="barChart1Type"></canvas>-->
         </div>
       </div>
     </div><!--/.col-->
