--- a/src/app/views/restaurants/bonplan-list/bonplan-list.component.html
+++ b/src/app/views/restaurants/bonplan-list/bonplan-list.component.html
@@ -1,4 +1,3 @@
-<script src="evenement-list.component.ts"></script>
 <div class="card" *ngIf="!isLoading">
   <div class="card-header ">
     <div class="row">
@@ -34,14 +33,14 @@
 
       <tr *ngFor="let item of pageSlice   ">
         <td>{{item.titre}}</td>
-        <td>{{item.idRestaurant.Nom}}</td>
+        <td>{{item.restaurantName}}</td>
         <td>{{item.details}}</td>
         <td>{{item.dateDebut}}</td>
         <td>{{item.dateFin}}</td>
         <td>
           <div class="row pl-2 ">
-            <i (click)="navigateToModify(item.idEvents)" class="fa fa-pencil mr-4" aria-hidden="true"></i>
-            <i class="fa fa-trash" aria-hidden="true" (click)="openDialog(item.idEvents)"></i>
+            <i (click)="navigateToModify(item.idBonPlan, item.restaurantId)" class="fa fa-pencil mr-4" aria-hidden="true"></i>
+            <i class="fa fa-trash" aria-hidden="true" (click)="openDialog(item.idBonPlan)"></i>
 
           </div>
         </td>
