--- a/src/app/views/restaurants/image-restaurant/image-restaurant.component.html
+++ b/src/app/views/restaurants/image-restaurant/image-restaurant.component.html
@@ -4,17 +4,48 @@
       <div class="col-xl-6 col-12">
         <h5>{{restaurantDetails.Nom}}</h5>
       </div>
-      <div class="col-xl-2 col-12 mb-xl-0 mb-2">
+      <div class="col-xl-3 col-12 mb-xl-0 mb-2">
         <button type="button" class="btn btn-block btn-primary" (click)="navigateToModifyRestaurant()">Vers le Restaurant</button>
 
       </div>
-      <div class="col-xl-4 col-12" >
-        <div class="col-10">
-          <input class="btn btn-block btn-primary"  type="file" name="file" (change)="uploadFile($event)">
+
+        <div class="col-xl-3 col-12 mb-xl-0 mb-2">
+
+            <button type="button" class="btn btn-primary w-100" (click)="isCollapsed = !isCollapsed"
+                    [attr.aria-expanded]="!isCollapsed" aria-controls="collapseBasic">Ajouter
+            </button>
         </div>
 
-      </div>
+
+      <br>
     </div>
+<br>
+    <div  id="collapseBasic" [collapse]="isCollapsed" [isAnimated]="true">
+         <div class="row">
+           <div class="col-xl-3 col-12 mb-xl-0 mb-2"></div>
+      <div class="col-xl-3 col-12 mb-xl-0 mb-2">
+        <div class="form-group">
+          <label for="company">Rang</label>
+          <input type="text" class="form-control" id="company" [(ngModel)]="this.rang" placeholder="Ajouter un rang">
+        </div>
+      </div>
+      <div class="col-xl-3 col-12 mb-xl-0 mb-2">
+        <div class="form-group">
+          <label for="company">Ordre</label>
+          <input type="text" class="form-control" id="company" [(ngModel)]="this.ordre" placeholder="Ajouter un ordre">
+        </div>
+      </div>
+      <div class="col-xl-3 col-12 mb-xl-0 mb-2">
+        <div class="form-group">
+          <label for="company"></label>
+          <input class="btn btn-block btn-primary" [disabled]="!rang || !ordre"  type="file" name="file" (change)="uploadFile($event)">
+        </div>
+      </div>
+         </div>
+    </div>
+
+
+
     <br>
 
   </div>
