--- a/src/app/views/restaurants/liste-restaurants/liste-restaurants.component.html
+++ b/src/app/views/restaurants/liste-restaurants/liste-restaurants.component.html
@@ -101,7 +101,7 @@
 
         <th>Email</th>
         <th>Site</th>
-        <th>Etoiles Michelin</th>
+        <th>Récompense</th>
         <th>Actions</th>
       </tr>
       </thead>
